Release 2026.06-ext0 - 10.0.0